<resources>
    <string name="app_name">Casita_en_llamas_ev3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="cerrar_sesion">cerrar_sesion</string>
    <string name="configuracion_del_detector">Configuracion del detector</string>
    <string name="nivel_actual_del_humo">nivel actual del humo</string>
    <string name="ingresar_fecha_actual">ingresar fecha actual</string>
    <string name="ingresar_hora_actual">ingresar hora actual</string>
    <string name="nivel_de_la_humedad">nivel de la humedad</string>
    <string name="guardar_configuracion">Guardar configuracion</string>
    <string name="ver_configuracion_actual">Ver configuracion actual</string>
    <string name="volver_menu">Volver menu</string>
    <string name="volver_ingresar_datos_del_termohigrometro">Volver ingresar datos del termohigrometro</string>
    <string name="contrase_a">Contraseña</string>
    <string name="repetir_y_confirmar_contrase_a">Repetir y confirmar contraseña</string>
    <string name="cambia_contrase_a">Cambiar Contraseña</string>
    <string name="ingrese_dato_del_detector">Ingrese dato del detector</string>
    <string name="ingresar_humo">ingresar humo</string>
    <string name="ingresar_humedad_actual">Ingresar Humedad actual</string>
    <string name="ingresar_hora">Ingresar Hora</string>
    <string name="ver_datos_actual_del_termohigrometro">Ver datos actual del termohigrometro</string>
    <string name="guardar_datos">Guardar Datos</string>
    <string name="ingresar_fecha">Ingresar Fecha</string>
    <string name="inicio_de_sesion">Inicio de sesion</string>
    <string name="datos_actuales_del_detector">Datos actuales del detector</string>
    <string name="humedad">Humedad:</string>
    <string name="fecha">Fecha:</string>
    <string name="hora">Hora:</string>
    <string name="humo">Humo:</string>
    <string name="agregar_nueva_contrase_a">Agregar nueva contraseña</string>
    <string name="ya_tienes_una_cuenta_inicia_sesion">¿Ya tienes una cuenta? Inicia sesion</string>
    <string name="registrar_usuario">Registrar Usuario</string>
    <string name="confirmar_contrase_a">confirmar contraseña</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="registro_de_usuarios">Registro de usuarios</string>
</resources>