<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_light"
    tools:context=".cambiar_password">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cambiar Contraseña"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:textAppearance="@style/TextAppearance.Material3.DisplayMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Cambiar Contraseña" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilContraseñaActual"
        android:layout_width="0dp"
        android:background="@color/white"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/ic_pass"
        android:hint="Contraseña actual"
        app:endIconMode="password_toggle"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etContraActual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:inputType="textPassword"
            tools:text="123456780" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        android:background="@color/white"
        app:startIconDrawable="@drawable/ic_pass"
        android:hint="@string/agregar_nueva_contrase_a"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tilContraseñaActual"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:inputType="textPassword"
            tools:text="123456" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/repetir_y_confirmar_contrase_a"
        android:layout_marginTop="20dp"
        app:endIconMode="password_toggle"
        android:background="@color/white"
        app:startIconDrawable="@drawable/ic_pass"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNewPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:inputType="textPassword"
            tools:text="123456" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCambiarPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"

        android:text="@string/cambia_contrase_a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.589"
        />




</androidx.constraintlayout.widget.ConstraintLayout>